Removing image from mobile, fixing spacing

--- a/client/src/components/featured-subpages/style.scss
+++ b/client/src/components/featured-subpages/style.scss
@@ -1,8 +1,10 @@
 section.featured-subpages{
   position: relative;
-  margin: 60px 0 90px;
+  margin-bottom: 60px;
+  padding: 0;
+  margin: 0 10px;
   @media (max-width: $screen-sm){
-    margin: 0 0 30px;
+    margin: 0 10px 30px;
   }
   .block{
     min-height: 420px;
